@@ -1,3 +1,15 @@
+2008-07-30  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/posix/getaddrinfo.c (gaih_inet): Raise size of initial
+	buffer passed to NSS functions.
+
+	* nscd/connections.c (nscd_init): Type if preprocessor directive.
+
+	* sysdeps/unix/sysv/linux/kernel-features.h (__ASSUME_PACCEPT):
+	Define.
+
+	* misc/syslog.c (openlog_internal): Fix compile problem.
+
 2008-07-28  Roland McGrath  <roland@redhat.com>
 
 	* elf/dl-sysdep.c (_dl_show_auxv): Add AT_EXECFN to the table.
